--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -1,8 +1,9 @@
 ---
 layout: default
-title: 
+body: blog archive
 ---
-<h1>Projects</h1>
+
+<h1> {{ page.category }} Projects</h1>
 <table cellpadding="0" cellspacing="0" border="0" class="data_table display" id="projects_table">
   <thead>
     <tr>
@@ -25,4 +26,3 @@ title:
 {% endfor %}
   </tbody>
 </table>
-
