--- a/_layouts/data.html
+++ b/_layouts/data.html
@@ -2,4 +2,7 @@
 layout: default
 title: Data
 ---
+<p>Search All: <input type="text" id="quickfind"/></p>
+<a id="cleanfilters" href="#">Clear Filters</a>
+<!-- <a class="btn" href="{{ page.data_source }}">Raw Data</a> -->
 {{ content }}
