--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,9 @@
 <body>
   <div id="container">
     <header>
-
+      <div class="container">
+        <a class="brand" href="#">BioReports</a>
+      </div>
     </header>
     <div id="main" role="main">
       <div class="content container">
