styling clean up. add contact and about.

--- a/_layouts/report.html
+++ b/_layouts/report.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <ul id="toc"></ul>
-<div class="page-header">
+<div class="page-title">
   <h1>{{ page.title }}</h1>
 </div>
 <div id="about">
