--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -15,7 +15,7 @@ body: blog archive
     </tr>
   </thead>
   <tbody>
-  {% for post in site.posts %}
+  {% for post in site.categories[page.category] %}
   <tr>
     <td><a href="{{ post.url}}"> {{ post.title }}</a></td>
     <td>{{ post.pi }}</td>
