--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <title></title>
+  <title>{{ page.title }}</title>
 
   <!-- Mobile viewport optimized: j.mp/bplateviewport -->
   <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -40,7 +40,7 @@
     </div>
     <footer>
       <div class="container">
-        <p><a href="/">projects</a> | <a href="http://wiki/research/Bioinformatics">bioinfo wiki</a> | <a href="contact.html">contact</a></p> 
+        <p><a href="about.html">about</a> | <a href="http://wiki/research/Bioinformatics">bioinfo wiki</a> | <a href="contact.html">contact</a></p> 
       </div>
     </footer>
   </div> <!--! end of #container -->
