--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,14 @@ li {
   color: #404040;
 }
 
+h2 {
+  margin-bottom: 17px;
+  border-bottom: 1px solid #ddd;
+  -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+  -moz-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+  box-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+}
+
 header {
   height: 35px;
   width: 100%;
@@ -19,11 +27,16 @@ header {
 .brand {
   float: right;
   display: block;
-  padding: 8px 20px 12px;
+  padding: 8px 20px 0;
   color: white;
   font-size: 20px;
   font-weight: 200;
   line-height: 1;
+}
+
+a.brand:hover, a.brand:visited { 
+  color: white;
+  text-decoration: none;
 }
 
 span.header_accent {
