--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,11 +48,7 @@
 
   <!-- JavaScript at the bottom for fast page loading -->
 
-  <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
-  <script>window.jQuery || document.write('<script src="js/libs/jquery-1.6.2.min.js"><\/script>')</script>
-
-
+  <script src="/js/libs/jquery-1.6.2.min.js"></script>
   <script src="/js/libs/jquery.tableofcontents.min.js"></script>
   <script src="/js/libs/picnet.table.filter.min.js"></script>
   <script src="/js/libs/jquery.dataTables.js"></script>
