--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,9 @@
   <link rel="stylesheet" href="/css/data_table.css">
   <link rel="stylesheet" href="/css/syntax.css">
   <link rel="stylesheet" href="/css/style.css">
+  {% if page.css %}
+  <link rel="stylesheet" href="/css/pages/{{ page.css }}">
+  {% endif %}
   <!-- end CSS-->
 
   <!-- All JavaScript at the bottom, except for Modernizr -->
@@ -30,7 +33,7 @@
   <div id="container">
     <header>
       <div class="container">
-        <a class="brand" href="#">BioReports</a>
+        <a class="brand" href="/">BioReports</a>
       </div>
     </header>
     <div id="main" role="main">
@@ -49,19 +52,20 @@
   <!-- JavaScript at the bottom for fast page loading -->
 
   <script src="/js/libs/jquery-1.6.2.min.js"></script>
+  {% if page.d3 %}
+  <script src="/js/libs/d3/d3.min.js"></script>
+  <script src="/js/libs/d3/d3.geom.min.js"></script>
+  <script src="/js/libs/d3/d3.layout.min.js"></script>
+  <script src="/js/libs/d3/d3.csv.min.js"></script>
+  <script src="/js/libs/d3/d3.time.min.js"></script>
+  {% endif %}
   <script src="/js/libs/jquery.tableofcontents.min.js"></script>
   <script src="/js/libs/picnet.table.filter.min.js"></script>
   <script src="/js/libs/jquery.dataTables.js"></script>
   <script src="/js/script.js"></script>
-
-	
-  <!-- Change UA-XXXXX-X to be your site's ID -->
-  <script>
-    window._gaq = [['_setAccount','UAXXXXXXXX1'],['_trackPageview'],['_trackPageLoadTime']];
-    Modernizr.load({
-      load: ('https:' == location.protocol ? '//ssl' : '//www') + '.google-analytics.com/ga.js'
-    });
-  </script>
+  {% if page.js %}
+  <script src="/js/pages/{{ page.js }}"></script>
+  {% endif %}
 
   <!-- Prompt IE 6 users to install Chrome Frame. Remove this if you want to support IE 6.
        chromium.org/developers/how-tos/chrome-frame-getting-started -->
