added copy to clipboard for big table data

--- a/_layouts/data.html
+++ b/_layouts/data.html
@@ -4,5 +4,6 @@ title: Data
 ---
 <p>Search All: <input type="text" id="quickfind"/></p>
 <a id="cleanfilters" href="#">Clear Filters</a>
-<!-- <a class="btn" href="{{ page.data_source }}">Raw Data</a> -->
+<br />
+<a class="btn" id="copy-table" href="#">Copy To Clipboard</a>
 {{ content }}
