--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,6 +62,7 @@
   <script src="/js/libs/jquery.tableofcontents.min.js"></script>
   <script src="/js/libs/picnet.table.filter.min.js"></script>
   <script src="/js/libs/jquery.dataTables.js"></script>
+  <script src="/js/libs/jquery.zclip.min.js"></script>
   <script src="/js/script.js"></script>
   {% if page.js %}
   <script src="/js/pages/{{ page.js }}"></script>
