--- a/css/style.css
+++ b/css/style.css
@@ -136,6 +136,12 @@ table.image-grid td {
   border:none;
 }
 
+.dataTables_info {
+width: 100%;
+padding-bottom: 10px;
+}
+
+
 blockquote {
   color: #777;
 }
@@ -151,6 +157,12 @@ footer p {
 .collapsed { display: none; }
 
 a#copy-table {
+  margin-top: 5px;
   float: right;
+  clear:right;
+}
+
+#quickfind {
+  margin-top: 5px;
 }
 
