--- a/_layouts/researcher_index.html
+++ b/_layouts/researcher_index.html
@@ -3,7 +3,7 @@ layout: default
 body: blog archive
 ---
 
-<h1> {{ page.category }} projects</h1>
+<h1> {{ page.researcher }} projects</h1>
 <table cellpadding="0" cellspacing="0" border="0" class="data_table display" id="projects_table">
   <thead>
     <tr>
@@ -15,13 +15,13 @@ body: blog archive
     </tr>
   </thead>
   <tbody>
-  {% for post in site.categories[page.category] %}
+  {% for sub_page in page.sub_pages %}
   <tr>
-    <td><a href="{{ post.url}}"> {{ post.title }}</a></td>
-    <td>{{ post.pi }}</td>
-    <td>{{ post.researcher }}</td>
-    <td>{{ post.analyst }}</td>
-    <td>{{ post.date | date_to_string }}</td>
+    <td><a href="{{ sub_page.url}}">{{ sub_page.title }}</a></td>
+    <td>{{ sub_page.pi }}</td>
+    <td>{{ sub_page.researcher }}</td>
+    <td>{{ sub_page.analyst }}</td>
+    <td>{{ sub_page.date | date_to_string }}</td>
   </tr>
 {% endfor %}
   </tbody>
