--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,6 +57,7 @@
   <script src="/js/libs/d3/d3.geom.min.js"></script>
   <script src="/js/libs/d3/d3.layout.min.js"></script>
   <script src="/js/libs/d3/d3.csv.min.js"></script>
+  <script src="/js/libs/d3/d3.tsv.min.js"></script>
   <script src="/js/libs/d3/d3.time.min.js"></script>
   {% endif %}
   <script src="/js/libs/jquery.tableofcontents.min.js"></script>
