change copy button css

--- a/_layouts/data.html
+++ b/_layouts/data.html
@@ -2,7 +2,7 @@
 layout: default
 title: Data
 ---
-<a class="btn" id="copy-table" href="#">Copy To Clipboard</a>
+<a class="btn copy" id="copy-table" href="#">Copy To Clipboard</a>
 <p>Search All: <input type="text" id="quickfind"/></p>
 <a id="cleanfilters" href="#">Clear Filters</a>
 <br />
