--- a/css/style.css
+++ b/css/style.css
@@ -10,10 +10,15 @@ li {
 
 h2 {
   margin-bottom: 17px;
-  border-bottom: 1px solid #ddd;
+  border-bottom: 2px solid #ccc;
   -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
   -moz-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
   box-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+  padding-top: 35px;
+}
+
+h3 {
+  padding-top: 20px;
 }
 
 header {
